tests/baselines/reference/tsxUnionElementType3.errors.txt
tests/cases/conformance/jsx/file.tsx(32,17): error TS2322: Type 'string' is not assignable to type 'never'.
tests/cases/conformance/jsx/file.tsx(35,10): error TS2741: Property 'x' is missing in type '{}' but required in type '{ x: number; }'.
tests/cases/conformance/jsx/file.tsx(36,10): error TS2741: Property 'x' is missing in type '{ "data-extra": string; }' but required in type '{ x: number; }'.


==== tests/cases/conformance/jsx/file.tsx (3 errors) ====
    import React = require('react');
    
    class RC1 extends React.Component<{x : number}, {}> {
        render() {
            return null;
        }
    }
    
    class RC2 extends React.Component<{ x: string }, {}> {
        render() {
            return null;
        }
        private method() { }
    }
    
    class RC3 extends React.Component<{}, {}> {
        render() {
            return null;
        }
    }
    
    class RC4 extends React.Component<{}, {}> {
        render() {
            return null;
        }
    }
    
    var EmptyRCComp = RC3 || RC4;
    var PartRCComp = RC1 || RC4;
    var RCComp = RC1 || RC2;
    // OK
    let a = <RCComp x="Hi" />;
                    ~
!!! error TS2322: Type 'string' is not assignable to type 'never'.
!!! related TS6500 tests/cases/conformance/jsx/file.tsx:3:36: The expected type comes from property 'x' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<RC1 | RC2> & { x: number; } & { children?: ReactNode; } & { x: string; } & { children?: ReactNode; }'
    let a1 = <EmptyRCComp />;
    let a2 = <EmptyRCComp data-prop="hello" />;
    let b = <PartRCComp />
             ~~~~~~~~~~
!!! error TS2741: Property 'x' is missing in type '{}' but required in type '{ x: number; }'.
!!! related TS2728 tests/cases/conformance/jsx/file.tsx:3:36: 'x' is declared here.
    let c = <PartRCComp data-extra="hello" />
             ~~~~~~~~~~
!!! error TS2741: Property 'x' is missing in type '{ "data-extra": string; }' but required in type '{ x: number; }'.
!!! related TS2728 tests/cases/conformance/jsx/file.tsx:3:36: 'x' is declared here.